[package]
name = "aetna-volume"
version = "0.1.0"
edition = "2024"
default-run = "aetna-volume"

[dependencies]
aetna-core = { path = "../aetna/aetna.main/crates/aetna-core" }
aetna-wgpu = { path = "../aetna/aetna.main/crates/aetna-wgpu" }
anyhow = "1"
pipewire = "0.9.2"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
wgpu = "29"
winit = "0.30"
