[package]
name = "aetna-volume"
version = "0.2.3"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "aetna-volume"

[dependencies]
aetna-core = "0.3.6"
aetna-winit-wgpu = "0.3.6"
anyhow = "1"
pipewire = "0.9.2"
rustfft = "6.2"
rustix = { version = "1.1", features = ["process"] }
serde = { version = "1", features = ["derive"] }
